# pyobsplot-test

./: README.md  main.py  pyproject.toml
templates/: index.html
