[project]
name = "pyobsplot-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "jinja2>=3.1.6",
  "polars>=1.29.0",
  "pyobsplot[typst]>=0.5.3.2",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.2",
]
